@@ -1,50 +1,63 @@
 # MarketCodeReader
 
-# Como executar o projeto(imagens e texto)
+# Como executar o projeto(imagens, textoe vídeo)
 
-
-## 1º) Necessário ter o java jdk 17.0.1 instalado na máquina
-### Se for windows, usar o executável que está no caminho: 
+## Extra, link do vídeo tutorial:
+https://drive.google.com/drive/folders/1rTcuIUmP6Gx_guCwvRim3QN_rGMHhL9c?usp=share_link
+## 1º) Necessário ter o java jdk 17.0.1 ou superior instalado na máquina
+### Caso esteja usando Windows, é necessário entrar no site da Oracle e baixar a versão:
 ```bash
-MarketCodeReader > src > main > java > com > example > marketcodereader > utils
+https://www.oracle.com/java/technologies/javase/jdk17-archive-downloads.html
 ```
-### Se for Linux, usar o comando para instalar a versão 17:
+### Se for Linux, basta usar o comando para instalar a versão 17:
 ```bash
 sudo apt install openjdk-17-jdk-headless
 ```
-## 2ª) Abrir o terminal na pasta que tem o arquivo **Application.java** com caminho:
+## 2ª) Necessário ter o Maven instalado, é um gerenciador de pacotes java. Link para documentação:
 ```bash
-MarketCodeReader > src > main > java > com > example > marketcodereade
+https://maven.apache.org/install.html
 ```
-![image](https://user-images.githubusercontent.com/58920070/197677432-cd621815-fb70-40f7-bd89-b48c9b659b63.png)
-### Windows
-![image](https://user-images.githubusercontent.com/58920070/197686828-f0f1d4f4-1498-4213-8ffd-3febb3add88e.png)
-### Linux
-![image](https://user-images.githubusercontent.com/58920070/197687726-14b486ed-0fce-4b36-995a-01aded48c22f.png)
-
-## 3º) Com terminal aberto na pasta do 2º passo, executar o Java Compiler da seguinte forma:
+## 3ª) Abrir na pasta do projeto no terminal:
 ```bash
-javac --module-path "MarketCodeReader > src > main > java > com > example > marketcodereader > utils > javafx-sdk-17.0.2 > lib"(sem aspas) --add-modules javafx.controls,javafx.fxml Application.java
+cd C:\Projeto_POO 
 ```
-### Caminho que deve ser colocado no texto dentro das aspas, no comando do 3º passo
-![image](https://user-images.githubusercontent.com/58920070/197677974-9088c46f-4947-4684-a9d8-103fcdc64383.png)
-### Windows
-![image](https://user-images.githubusercontent.com/58920070/197687189-a508e114-8303-4be9-bead-72a2766c1a10.png)
-### Linux
-![image](https://user-images.githubusercontent.com/58920070/197688192-c23036fd-5a08-414c-bf1b-46f1e53995ab.png)
-
-## 4º) Com terminal aberto na pasta do 2º passo, executar a aplicação:
+![image](https://user-images.githubusercontent.com/58920070/200817281-e229f0c7-81a8-4957-abbe-b16ee4f3a19b.png)
+![image](https://user-images.githubusercontent.com/58920070/200817386-b8c29b78-6840-4ece-ae7c-57ac0d0745d3.png)
+## 4ª) Verificar se o Maven e Java estão instalados
+### Verificar se o Java está instalado:
 ```bash
-java --module-path "MarketCodeReader > src > main > java > com > example > marketcodereader > utils > javafx-sdk-17.0.2 > lib"(sem aspas) --add-modules javafx.controls,javafx.fxml Application
+java --version
 ```
-### Caminho que deve ser colocado no texto dentro das aspas, no comando do 4º passo
-![image](https://user-images.githubusercontent.com/58920070/197677974-9088c46f-4947-4684-a9d8-103fcdc64383.png)
-### Windows
-![image](https://user-images.githubusercontent.com/58920070/197687334-5669e400-b69b-47f6-875f-0eef6a713272.png)
-### Linux
-![image](https://user-images.githubusercontent.com/58920070/197688369-5b72776f-37a1-46af-b3fc-0dc71ece6da1.png)
+### Verificar se o Maven está instalado:
+```bash
+mvn --version
+```
+![image](https://user-images.githubusercontent.com/58920070/200893806-a93cf56e-10f7-4cef-ab30-9731fef4d139.png)
+## 5ª) Rodando o projeto:
+### Para executar o projeto, segue o comando. OBS: é necessário estar na pasta do projeto:
+```bash
+mvn clean javafx:run
+```
+![image](https://user-images.githubusercontent.com/58920070/200894533-4686ae88-3021-42c8-8696-4aa7dbb5c19b.png)
+## 6ª) Com o projeto aberto:
+### Nele é possível passar números de 1 até 8, que são códigos para produtos: 
+- arroz -> 1
+- feijao -> 2
+- cuzcuz -> 3
+- carne -> 4
+- frango -> 5
+- cebola(unidade) -> 6
+- banana(duzia) -> 7
+- leite condensado -> 8
 
-## 5ª) Isso tudo irá gerar um arquivo .exe dentro da pasta do programa, basta executá-lo.
-![image](https://user-images.githubusercontent.com/58920070/197687412-3e349ad3-ff13-401c-979f-c3d7cba2bb14.png)
+![image](https://user-images.githubusercontent.com/58920070/200896464-c6c71d1b-6a5b-4679-b213-40442b285c15.png)
 
+### Ao clicar em imprimir nota, o cliente é enviado para outra tela, na qual ele passsa o nome da nota e seu CPF/CNPJ
 
+![image](https://user-images.githubusercontent.com/58920070/200897368-ef36d343-2d5c-4db7-b077-74ab63562c66.png)
+
+### E ao clicar em imprimir, uma nota é gerada como segue na imagem a seguir. Ao clicar em voltar, o cliente retorna a págiina inicial, onde ele pode fazer uma nova compra
+![image](https://user-images.githubusercontent.com/58920070/200897623-ffc9dbd7-7b58-47c9-84a8-dbbc3d1a343e.png)
+
+## Extra, link do vídeo tutorial:
+https://drive.google.com/drive/folders/1rTcuIUmP6Gx_guCwvRim3QN_rGMHhL9c?usp=share_link
